--- a/rules/S6485/java/rule.adoc
+++ b/rules/S6485/java/rule.adoc
@@ -1,22 +1,53 @@
-FIXME: add a description
+Hash-based collections with known capacity should be initialized with the proper related static method.
 
-// If you want to factorize the description uncomment the following line and create the file.
-//include::../description.adoc[]
+When creating an instance of HashMap or HashSet, the developer can pick a constructor with known capacity.
+However, the requested capacity is not fully allocated by default.
+Indeed, when the collection reaches the load factor of the collection (default: 0.75), the collection is resized on the fly, leading to unexpected performance issues.
+
+As of Java 19, hash-based collections provide a static method that allocates the requested capacity at construction time.
 
 == Noncompliant Code Example
 
 [source,java]
 ----
-FIXME
+private static final int KNOWN_CAPACITY = 1_000_000;
+
+public static Map<String, Integer> buildAMap() {
+    return new HashMap<>(KNOWN_CAPACITY); // Noncompliant
+}
+
+public static Map<String, Integer> buildAMapWithMaxLoadFactor() {
+    return new HashMap<>(KNOWN_CAPACITY, 1.0f); // Noncompliant
+}
+
+public static Set<String> buildASet() {
+    return new HashSet<>(KNOWN_CAPACITY); // Noncompliant
+}
+
+public static Set<String> buildASetWithMaxLoadFactor() {
+    return new HashSet<>(KNOWN_CAPACITY, 1.0f); // Noncompliant
+}
 ----
 
 == Compliant Solution
 
 [source,java]
 ----
-FIXME
+private static final int KNOWN_CAPACITY = 1_000_000;
+
+public static Map<String, Integer> buildABetterMap() {
+    return HashMap.newHashMap(KNOWN_CAPACITY);
+}
+
+public static Set<String> buildABetterSet() {
+    return HashSet.newHashSet(KNOWN_CAPACITY);
+}
 ----
 
 == See
 
-FIXME: A list of links
+- https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/util/HashMap.html#newHashMap(int)
+- https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/util/HashSet.html#newHashSet(int)
+- https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/util/LinkedHashMap.html#newLinkedHashMap(int)
+- https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/util/LinkedHashSet.html#newLinkedHashSet(int)
+- https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/util/WeakHashMap.html#newWeakHashMap(int)
