--- a/rules/S6485/java/rule.adoc
+++ b/rules/S6485/java/rule.adoc
@@ -50,7 +50,7 @@ public static Set<String> buildABetterSet() {
 - https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/util/LinkedHashSet.html#newLinkedHashSet(int)
 - https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/util/WeakHashMap.html#newWeakHashMap(int)
 
-== Implementation specification
+== Implementation Specification
 
 === Message
 Replace this call to the constructor with the better suited static method.
