--- a/rules/S2445/csharp/rule.adoc
+++ b/rules/S2445/csharp/rule.adoc
@@ -1,4 +1,6 @@
-include::../rule.adoc[]
+include::rule-except-see.adoc[]
+
+include::../see.adoc[]
 
 ifdef::env-github,rspecator-view[]
 
@@ -6,7 +8,7 @@ ifdef::env-github,rspecator-view[]
 == Implementation Specification
 (visible only on this page)
 
-include::../message.adoc[]
+include::message.adoc[]
 
 include::../highlighting.adoc[]
 
