Add bicep examples for S5332

--- a/rules/S5332/azureresourcemanager/rule.adoc
+++ b/rules/S5332/azureresourcemanager/rule.adoc
@@ -25,6 +25,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites[Micros
 }
 ----
 
+[source,bicep,diff-id=8,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Web/sites@2022-03-01' = {
+  properties: {
+    httpsOnly: false // Sensitive
+  }
+}
+----
+
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites/config-web[Microsoft.Web/sites/config]:
 
 [source,json,diff-id=2,diff-type=noncompliant]
@@ -41,6 +50,16 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites/config
       }
     }
   ]
+}
+----
+
+
+[source,bicep,diff-id=9,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Web/sites/config@2022-09-01' = {
+  properties: {
+    ftpsState: 'AllAllowed' // Sensitive
+  }
 }
 ----
 
@@ -63,6 +82,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.storage/storagea
 }
 ----
 
+[source,bicep,diff-id=10,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Storage/storageAccounts@2022-09-01' = {
+  properties: {
+    supportsHttpsTrafficOnly: false // Sensitive
+  }
+}
+----
+
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.apimanagement/service/apis[Microsoft.ApiManagement/service/apis]:
 
 [source,json,diff-id=4,diff-type=noncompliant]
@@ -79,6 +107,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.apimanagement/se
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=11,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.ApiManagement/service/apis@2022-08-01' = {
+  properties: {
+    protocols: ['http'] // Sensitive
+  }
 }
 ----
 
@@ -101,6 +138,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.cdn/profiles/end
 }
 ----
 
+[source,bicep,diff-id=12,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Cdn/profiles/endpoints@2021-06-01' = {
+  properties: {
+    isHttpAllowed: true // Sensitive
+  }
+}
+----
+
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.cache/redisenterprise/databases[Microsoft.Cache/redisEnterprise/databases]:
 
 [source,json,diff-id=6,diff-type=noncompliant]
@@ -117,6 +163,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.cache/redisenter
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=13,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Cache/redisEnterprise/databases@2022-01-01' = {
+  properties: {
+    clientProtocol: "Plaintext" // Sensitive
+  }
 }
 ----
 
@@ -138,6 +193,15 @@ and https://learn.microsoft.com/en-us/azure/templates/microsoft.dbforpostgresql/
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=14,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.DBforMySQL/servers@2017-12-01' = {
+  properties: {
+    sslEnforcement: "Disabled" // Sensitive
+  }
 }
 ----
 
@@ -163,6 +227,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites[Micros
 }
 ----
 
+[source,bicep,diff-id=8,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Web/sites@2022-03-01' = {
+  properties: {
+    httpsOnly: true
+  }
+}
+----
+
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites/config-web[Microsoft.Web/sites/config]:
 
 [source,json,diff-id=2,diff-type=compliant]
@@ -179,6 +252,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites/config
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=9,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Web/sites/config@2022-09-01' = {
+  properties: {
+    ftpsState: 'FtpsOnly'
+  }
 }
 ----
 
@@ -201,6 +283,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.storage/storagea
 }
 ----
 
+[source,bicep,diff-id=10,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Storage/storageAccounts@2022-09-01' = {
+  properties: {
+    supportsHttpsTrafficOnly: true
+  }
+}
+----
+
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.apimanagement/service/apis[Microsoft.ApiManagement/service/apis]:
 
 [source,json,diff-id=4,diff-type=compliant]
@@ -217,6 +308,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.apimanagement/se
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=11,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.ApiManagement/service/apis@2022-08-01' = {
+  properties: {
+    protocols: ['https']
+  }
 }
 ----
 
@@ -239,6 +339,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.cdn/profiles/end
 }
 ----
 
+[source,bicep,diff-id=12,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Cdn/profiles/endpoints@2021-06-01' = {
+  properties: {
+    isHttpAllowed: false
+  }
+}
+----
+
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.cache/redisenterprise/databases[Microsoft.Cache/redisEnterprise/databases]:
 
 [source,json,diff-id=6,diff-type=compliant]
@@ -255,6 +364,15 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.cache/redisenter
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=13,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Cache/redisEnterprise/databases@2022-01-01' = {
+  properties: {
+    clientProtocol: "Encrypted"
+  }
 }
 ----
 
@@ -276,6 +394,15 @@ and https://learn.microsoft.com/en-us/azure/templates/microsoft.dbforpostgresql/
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=14,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.DBforMySQL/servers@2017-12-01' = {
+  properties: {
+    sslEnforcement: "Enabled"
+  }
 }
 ----
 
