--- a/rules/S6387/azureresourcemanager/rule.adoc
+++ b/rules/S6387/azureresourcemanager/rule.adoc
@@ -6,6 +6,15 @@ include::../recommended.adoc[]
 
 == Sensitive Code Example
 
+[source,bicep,diff-id=1,diff-type=noncompliant]
+----
+targetScope = 'subscription' // Sensitive
+
+resource roleAssignment 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
+  name: guid(subscription().id, 'exampleRoleAssignment')
+}
+----
+
 [source,json,diff-id=2,diff-type=noncompliant]
 ----
 {
@@ -22,6 +31,15 @@ include::../recommended.adoc[]
 ----
 
 == Compliant Solution
+
+[source,bicep,diff-id=1,diff-type=compliant]
+----
+targetScope = 'resourceGroup'
+
+resource roleAssignment 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
+  name: guid(resourceGroup().id, 'exampleRoleAssignment')
+}
+----
 
 [source,json,diff-id=2,diff-type=noncompliant]
 ----
