Add Bicep examples

--- a/rules/S6364/azureresourcemanager/rule.adoc
+++ b/rules/S6364/azureresourcemanager/rule.adoc
@@ -8,6 +8,27 @@ include::../recommended.adoc[]
 
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites/config-backup?pivots=deployment-language-arm-template[Azure App Service]:
 
+
+[source,bicep,diff-id=1,diff-type=noncompliant]
+----
+resource webApp 'Microsoft.Web/sites@2022-03-01' = {
+  name: 'webApp'
+}
+
+resource backup 'config@2022-03-01' = {
+  name: 'backup'
+  parent: webApp
+  properties: {
+    backupSchedule: {
+      frequencyInterval: 1
+      frequencyUnit: 'Day'
+      keepAtLeastOneBackup: true
+      retentionPeriodInDays: 2  // Sensitive
+    }
+  }
+}
+----
+
 [source,json,diff-id=2,diff-type=noncompliant]
 ----
 {
@@ -41,6 +62,21 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites/config
 
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.documentdb/databaseaccounts?pivots=deployment-language-arm-template[Azure Cosmos DB] accounts:
 
+[source,bicep,diff-id=3,diff-type=noncompliant]
+----
+resource cosmosDb 'Microsoft.DocumentDB/databaseAccounts@2023-04-15' = {
+    properties: {
+        backupPolicy: {
+            type: 'Periodic'
+            periodicModeProperties: {
+                backupIntervalInMinutes: 1440
+                backupRetentionIntervalInHours: 8  // Sensitive
+            }
+        }
+    }
+}
+----
+
 [source,json,diff-id=4,diff-type=noncompliant]
 ----
 {
@@ -65,6 +101,27 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.documentdb/datab
 ----
 
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.recoveryservices/vaults/backuppolicies?pivots=deployment-language-arm-template[Azure Backup] vault policies:
+
+[source,bicep,diff-id=5,diff-type=noncompliant]
+----
+resource vault 'Microsoft.RecoveryServices/vaults@2023-01-01' = {
+    name: 'testVault'
+
+    resource backupPolicy 'backupPolicies@2023-01-01' = {
+        name: 'backupPolicy'
+        properties: {
+            backupManagementType: 'AzureSql'
+            retentionPolicy: {
+                retentionPolicyType: 'SimpleRetentionPolicy'
+                retentionDuration: {
+                    count: 2  // Sensitive
+                    durationType: 'Days'
+                }
+            }
+        }
+    }
+}
+----
 
 [source,json,diff-id=6,diff-type=noncompliant]
 ----
@@ -102,6 +159,26 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.recoveryservices
 
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites/config-backup?pivots=deployment-language-arm-template[Azure App Service]:
 
+[source,bicep,diff-id=1,diff-type=compliant]
+----
+resource webApp 'Microsoft.Web/sites@2022-03-01' = {
+  name: 'webApp'
+}
+
+resource backup 'config@2022-03-01' = {
+  name: 'backup'
+  parent: webApp
+  properties: {
+    backupSchedule: {
+      frequencyInterval: 1
+      frequencyUnit: 'Day'
+      keepAtLeastOneBackup: true
+      retentionPeriodInDays: 8
+    }
+  }
+}
+----
+
 [source,json,diff-id=2,diff-type=compliant]
 ----
 {
@@ -135,6 +212,23 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.web/sites/config
 
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.documentdb/databaseaccounts?pivots=deployment-language-arm-template[Azure Cosmos DB] accounts:
 
+
+[source,bicep,diff-id=3,diff-type=compliant]
+----
+resource cosmosDb 'Microsoft.DocumentDB/databaseAccounts@2023-04-15' = {
+    properties: {
+        backupPolicy: {
+            type: 'Periodic'
+            periodicModeProperties: {
+                backupIntervalInMinutes: 1440
+                backupRetentionIntervalInHours: 192
+            }
+        }
+    }
+}
+----
+
+
 [source,json,diff-id=4,diff-type=compliant]
 ----
 {
@@ -159,6 +253,29 @@ For https://learn.microsoft.com/en-us/azure/templates/microsoft.documentdb/datab
 ----
 
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.recoveryservices/vaults/backuppolicies?pivots=deployment-language-arm-template[Azure Backup] vault policies:
+
+
+[source,bicep,diff-id=5,diff-type=compliant]
+----
+resource vault 'Microsoft.RecoveryServices/vaults@2023-01-01' = {
+    name: 'testVault'
+
+    resource backupPolicy 'backupPolicies@2023-01-01' = {
+        name: 'backupPolicy'
+        properties: {
+            backupManagementType: 'AzureSql'
+            retentionPolicy: {
+                retentionPolicyType: 'SimpleRetentionPolicy'
+                retentionDuration: {
+                    count: 8
+                    durationType: 'Days'
+                }
+            }
+        }
+    }
+}
+----
+
 
 [source,json,diff-id=6,diff-type=compliant]
 ----
