Modify rule S6388: Add language AzureResourceManager (Bicep)

--- a/rules/S6388/azureresourcemanager/examples/Microsoft.AzureArcData_sqlServerInstances_databases.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.AzureArcData_sqlServerInstances_databases.compliant.adoc
@@ -19,3 +19,14 @@ Enabled encryption on SQL service instance database:
   ]
 }
 ----
+
+[source,bicep,diff-id=1211,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.AzureArcData/sqlServerInstances/databases@2023-03-15-preview' = {
+  properties: {
+    databaseOptions: {
+      isEncrypted: true
+    }
+  }
+}
+----
