--- a/rules/S6388/azureresourcemanager/examples/Microsoft.AzureArcData_sqlServerInstances_databases.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.AzureArcData_sqlServerInstances_databases.noncompliant.adoc
@@ -19,3 +19,14 @@ Disabled encryption on SQL service instance database:
   ]
 }
 ----
+
+[source,bicep,diff-id=1211,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.AzureArcData/sqlServerInstances/databases@2023-03-15-preview' = {
+  properties: {
+    databaseOptions: {
+      isEncrypted: false
+    }
+  }
+}
+----
