--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_snapshots.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_snapshots.noncompliant.adoc
@@ -19,3 +19,14 @@ Disabled disk encryption with settings collection:
   ]
 }
 ----
+
+[source,bicep,diff-id=412,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Compute/snapshots@2022-07-02' = {
+  properties: {
+    encryptionSettingsCollection: {
+      enabled: false
+    }
+  }
+}
+----
