--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_virtualMachines.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_virtualMachines.noncompliant.adoc
@@ -20,6 +20,17 @@ Disabled encryption at host level:
 }
 ----
 
+[source,bicep,diff-id=111,diff-type=noncompliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    securityProfile: {
+      encryptionAtHost: false
+    }
+  }
+}
+----
+
 Disabled encryption for managed disk:
 [source,json,diff-id=102,diff-type=noncompliant]
 ----
@@ -41,6 +52,21 @@ Disabled encryption for managed disk:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=112,diff-type=noncompliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    storageProfile: {
+      dataDisks: [
+        {
+          name: 'myDisk'
+        }
+      ]
+    }
+  }
 }
 ----
 
@@ -68,6 +94,22 @@ Disabled encryption for OS disk:
 }
 ----
 
+[source,bicep,diff-id=114,diff-type=noncompliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    storageProfile: {
+      osDisk: {
+        name: 'myDisk'
+        encryptionSettings: {
+          enabled: false
+        }
+      }
+    }
+  }
+}
+----
+
 Disabled encryption for OS managed disk:
 [source,json,diff-id=105,diff-type=noncompliant]
 ----
@@ -89,5 +131,21 @@ Disabled encryption for OS managed disk:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=115,diff-type=noncompliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    storageProfile: {
+      osDisk: {
+        name: 'myDisk'
+        managedDisk: {
+          id: 'myDiskId'
+        }
+      }
+    }
+  }
 }
 ----
