--- a/rules/S6388/azureresourcemanager/examples/Microsoft.ContainerService_managedClusters.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.ContainerService_managedClusters.compliant.adoc
@@ -22,3 +22,17 @@ Enabled encryption at host and set the disk encryption set ID:
   ]
 }
 ----
+
+[source,bicep,diff-id=1111,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.ContainerService/managedClusters@2023-03-02-preview' = {
+  properties: {
+    agentPoolProfiles: [
+      {
+        enableEncryptionAtHost: true
+      }
+    ]
+    diskEncryptionSetID: 'string'
+  }
+}
+----
