--- a/rules/S6388/azureresourcemanager/examples/Microsoft.DBforPostgreSQL_servers.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.DBforPostgreSQL_servers.compliant.adoc
@@ -17,3 +17,12 @@ Enabled infrastructure double encryption for PostgreSQL server:
   ]
 }
 ----
+
+[source,bicep,diff-id=711,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.DBforPostgreSQL/servers@2017-12-01' = {
+  properties: {
+    infrastructureEncryption: 'Enabled'
+  }
+}
+----
