--- a/rules/S6388/azureresourcemanager/examples/Microsoft.DataLakeStore_accounts.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.DataLakeStore_accounts.noncompliant.adoc
@@ -17,3 +17,13 @@ Disabled encryption for Data Lake Store:
   ]
 }
 ----
+
+[source,bicep,diff-id=511,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.DataLakeStore/accounts@2016-11-01' = {
+  properties: {
+    encryptionState: 'Disabled'
+  }
+}
+----
+
