--- a/rules/S6388/azureresourcemanager/examples/Microsoft.DocumentDB_cassandraClusters_dataCenters.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.DocumentDB_cassandraClusters_dataCenters.compliant.adoc
@@ -19,3 +19,16 @@ Enabled encryption for a Cassandra Cluster datacenter's managed disk and backup:
   ]
 }
 ----
+
+[source,bicep,diff-id=911,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.DocumentDB/cassandraClusters/dataCenters@2023-04-15' = {
+  name: 'string'
+  parent: parent
+  properties: {
+    diskCapacity: 4
+    backupStorageCustomerKeyUri: 'string'
+    managedDiskCustomerKeyUri: 'string'
+  }
+}
+----
