--- a/rules/S6388/azureresourcemanager/examples/Microsoft.DocumentDB_cassandraClusters_dataCenters.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.DocumentDB_cassandraClusters_dataCenters.noncompliant.adoc
@@ -17,3 +17,14 @@ Disabled encryption for a Cassandra Cluster datacenter's managed disk and backup
   ]
 }
 ----
+
+[source,bicep,diff-id=911,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.DocumentDB/cassandraClusters/dataCenters@2023-04-15' = {
+  name: 'string'
+  parent: parent
+  properties: {
+    diskCapacity: 4
+  }
+}
+----
