--- a/rules/S6388/azureresourcemanager/examples/Microsoft.HDInsight_clusters.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.HDInsight_clusters.compliant.adoc
@@ -24,6 +24,21 @@ Enabled encryption for data disk:
 }
 ----
 
+[source,bicep,diff-id=1311,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.HDInsight/clusters@2021-06-01' = {
+  properties: {
+    computeProfile: {
+      roles: [
+        {
+          encryptDataDisks: true
+        }
+      ]
+    }
+  }
+}
+----
+
 Enabled encryption for data disk at application level:
 [source,json,diff-id=1302,diff-type=compliant]
 ----
@@ -48,6 +63,21 @@ Enabled encryption for data disk at application level:
 }
 ----
 
+[source,bicep,diff-id=1312,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.HDInsight/clusters/applications@2021-06-01' = {
+  properties: {
+    computeProfile: {
+      roles: [
+        {
+          encryptDataDisks: true
+        }
+      ]
+    }
+  }
+}
+----
+
 Enabled encryption for resource disk:
 [source,json,diff-id=1303,diff-type=compliant]
 ----
@@ -65,5 +95,16 @@ Enabled encryption for resource disk:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=1313,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.HDInsight/clusters@2021-06-01' = {
+  properties: {
+    diskEncryptionProperties: {
+      encryptionAtHost: true
+    }
+  }
 }
 ----
