--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Kusto_clusters.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Kusto_clusters.compliant.adoc
@@ -17,3 +17,12 @@ Enabled encryption for disk:
   ]
 }
 ----
+
+[source,bicep,diff-id=1411,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Kusto/clusters@2022-12-29' = {
+  properties: {
+    enableDiskEncryption: true
+  }
+}
+----
