--- a/rules/S6388/azureresourcemanager/examples/Microsoft.RecoveryServices.vaults.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.RecoveryServices.vaults.compliant.adoc
@@ -20,6 +20,17 @@ Enabled encryption on infrastructure:
 }
 ----
 
+[source,bicep,diff-id=1511,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.RecoveryServices/vaults@2023-01-01' = {
+  properties: {
+    encryption: {
+      infrastructureEncryption: 'Enabled'
+    }
+  }
+}
+----
+
 Enabled encryption on infastructure for backup:
 [source,json,diff-id=1502,diff-type=compliant]
 ----
@@ -36,5 +47,15 @@ Enabled encryption on infastructure for backup:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=1512,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.RecoveryServices/vaults/backupEncryptionConfigs@2023-01-01' = {
+  properties: {
+    encryptionAtRestType: '{CustomerManaged | MicrosoftManaged}'
+    infrastructureEncryptionState: 'Enabled'
+  }
 }
 ----
