--- a/rules/S6388/azureresourcemanager/examples/Microsoft.RecoveryServices.vaults.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.RecoveryServices.vaults.noncompliant.adoc
@@ -20,6 +20,17 @@ Disabled encryption for disk:
 }
 ----
 
+[source,bicep,diff-id=1511,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.RecoveryServices/vaults@2023-01-01' = {
+  properties: {
+    encryption: {
+      infrastructureEncryption: 'Disabled'
+    }
+  }
+}
+----
+
 Disabled encryption on infastructure for backup:
 [source,json,diff-id=1502,diff-type=noncompliant]
 ----
@@ -35,5 +46,15 @@ Disabled encryption on infastructure for backup:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=1512,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.RecoveryServices/vaults/backupEncryptionConfigs@2023-01-01' = {
+  properties: {
+    encryptionAtRestType: '{CustomerManaged | MicrosoftManaged}'
+    infrastructureEncryptionState: 'Disabled'
+  }
 }
 ----
