--- a/rules/S6388/azureresourcemanager/examples/Microsoft.RedHatOpenShift_openShiftClusters.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.RedHatOpenShift_openShiftClusters.compliant.adoc
@@ -26,3 +26,21 @@ Enabled disk encryption for master profile and worker profiles:
   ]
 }
 ----
+
+[source,bicep,diff-id=1611,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.RedHatOpenShift/openShiftClusters@2022-09-04' = {
+  properties: {
+    masterProfile: {
+      diskEncryptionSetId: 'string'
+      encryptionAtHost: 'Enabled'
+    }
+    workerProfiles: [
+      {
+        diskEncryptionSetId: 'string'
+        encryptionAtHost: 'Enabled'
+      }
+    ]
+  }
+}
+----
