--- a/rules/S6388/azureresourcemanager/examples/Microsoft.RedHatOpenShift_openShiftClusters.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.RedHatOpenShift_openShiftClusters.noncompliant.adoc
@@ -24,3 +24,19 @@ Disabled disk encryption for master profile and worker profiles:
   ]
 }
 ----
+
+[source,bicep,diff-id=1611,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.RedHatOpenShift/openShiftClusters@2022-09-04' = {
+  properties: {
+    masterProfile: {
+      encryptionAtHost: 'Disabled'
+    }
+    workerProfiles: [
+      {
+        encryptionAtHost: 'Disabled'
+      }
+    ]
+  }
+}
+----
