--- a/rules/S6388/azureresourcemanager/examples/Microsoft.SqlVirtualMachine_sqlVirtualMachines.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.SqlVirtualMachine_sqlVirtualMachines.compliant.adoc
@@ -20,3 +20,15 @@ Enabled encryption for SQL Virtual Machine:
   ]
 }
 ----
+
+[source,bicep,diff-id=811,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.SqlVirtualMachine/sqlVirtualMachines@2022-08-01-preview' = {
+  properties: {
+    autoBackupSettings: {
+      enableEncryption: true
+      password: 'string'
+    }
+  }
+}
+----
