--- a/rules/S6388/azureresourcemanager/examples/Microsoft.SqlVirtualMachine_sqlVirtualMachines.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.SqlVirtualMachine_sqlVirtualMachines.noncompliant.adoc
@@ -19,3 +19,14 @@ Disabled encryption for SQL Virtual Machine:
   ]
 }
 ----
+
+[source,bicep,diff-id=811,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.SqlVirtualMachine/sqlVirtualMachines@2022-08-01-preview' = {
+  properties: {
+    autoBackupSettings: {
+      enableEncryption: false
+    }
+  }
+}
+----
