--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Storage_storageAccounts.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Storage_storageAccounts.compliant.adoc
@@ -20,6 +20,17 @@ Enabled enforcing of infrastructure encryption for double encryption of data:
 }
 ----
 
+[source,bicep,diff-id=1011,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Storage/storageAccounts@2022-09-01' = {
+  properties: {
+    encryption: {
+      requireInfrastructureEncryption: true
+    }
+  }
+}
+----
+
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.storage/storageaccounts/encryptionscopes?pivots=deployment-language-bicep[Microsoft.Storage/storageAccounts/encryptionScopes]:
 
 Enabled enforcing of infrastructure encryption for double encryption of data at encryption scope level:
@@ -37,5 +48,14 @@ Enabled enforcing of infrastructure encryption for double encryption of data at 
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=1012,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Storage/storageAccounts/encryptionScopes@2022-09-01' = {
+  properties: {
+    requireInfrastructureEncryption: true
+  }
 }
 ----
