--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_virtualMachineScaleSets.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_virtualMachineScaleSets.compliant.adoc
@@ -22,6 +22,19 @@ Enabled encryption at host level:
 }
 ----
 
+[source,bicep,diff-id=211,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Compute/virtualMachineScaleSets@2022-11-01' = {
+  properties: {
+    virtualMachineProfile: {
+      securityProfile: {
+        encryptionAtHost: true
+      }
+    }
+  }
+}
+----
+
 Enabled encryption for data disk:
 [source,json,diff-id=202,diff-type=compliant]
 ----
@@ -50,6 +63,28 @@ Enabled encryption for data disk:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=212,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Compute/virtualMachineScaleSets@2022-11-01' = {
+  properties: {
+    virtualMachineProfile: {
+      storageProfile: {
+        dataDisks: [
+          {
+            name: 'myDataDisk'
+            managedDisk: {
+              diskEncryptionSet: {
+                id: 'string'
+              }
+            }
+          }
+        ]
+      }
+    }
+  }
 }
 ----
 
@@ -86,6 +121,30 @@ Enabled encryption for data disk through security profile:
 }
 ----
 
+[source,bicep,diff-id=213,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Compute/virtualMachineScaleSets@2022-11-01' = {
+  properties: {
+    virtualMachineProfile: {
+      storageProfile: {
+        dataDisks: [
+          {
+            name: 'myDataDisk'
+            managedDisk: {
+              securityProfile: {
+                diskEncryptionSet: {
+                  id: 'string'
+                }
+              }
+            }
+          }
+        ]
+      }
+    }
+  }
+}
+----
+
 Enabled encryption for OS disk:
 [source,json,diff-id=204,diff-type=compliant]
 ----
@@ -112,6 +171,26 @@ Enabled encryption for OS disk:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=214,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Compute/virtualMachineScaleSets@2022-11-01' = {
+  properties: {
+    virtualMachineProfile: {
+      storageProfile: {
+        osDisk: {
+          name: 'myOsDisk'
+          managedDisk: {
+            diskEncryptionSet: {
+              id: 'string'
+            }
+          }
+        }
+      }
+    }
+  }
 }
 ----
 
@@ -143,5 +222,27 @@ Enabled encryption for OS disk through security profile:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=215,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.Compute/virtualMachineScaleSets@2022-11-01' = {
+  properties: {
+    virtualMachineProfile: {
+      storageProfile: {
+        osDisk: {
+          name: 'myOsDisk'
+          managedDisk: {
+            securityProfile: {
+              diskEncryptionSet: {
+                id: 'string'
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 ----
