--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_virtualMachineScaleSets.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_virtualMachineScaleSets.noncompliant.adoc
@@ -22,6 +22,19 @@ Disabled encryption at host level:
 }
 ----
 
+[source,bicep,diff-id=211,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Compute/virtualMachineScaleSets@2022-11-01' = {
+  properties: {
+    virtualMachineProfile: {
+      securityProfile: {
+        encryptionAtHost: false
+      }
+    }
+  }
+}
+----
+
 Disabled encryption for data disk:
 [source,json,diff-id=202,diff-type=noncompliant]
 ----
@@ -48,6 +61,23 @@ Disabled encryption for data disk:
 }
 ----
 
+[source,bicep,diff-id=212,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Compute/virtualMachineScaleSets@2022-11-01' = {
+  properties: {
+    virtualMachineProfile: {
+      storageProfile: {
+        dataDisks: [
+          {
+            name: 'myDataDisk'
+          }
+        ]
+      }
+    }
+  }
+}
+----
+
 Disabled encryption for OS disk:
 [source,json,diff-id=204,diff-type=noncompliant]
 ----
@@ -69,5 +99,20 @@ Disabled encryption for OS disk:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=214,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Compute/virtualMachineScaleSets@2022-11-01' = {
+  properties: {
+    virtualMachineProfile: {
+      storageProfile: {
+        osDisk: {
+          name: 'myOsDisk'
+        }
+      }
+    }
+  }
 }
 ----
