--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_virtualMachines.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Compute_virtualMachines.compliant.adoc
@@ -20,6 +20,17 @@ Enabled encryption at host level:
 }
 ----
 
+[source,bicep,diff-id=111,diff-type=compliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    securityProfile: {
+      encryptionAtHost: true
+    }
+  }
+}
+----
+
 Enabled encryption for managed disk:
 [source,json,diff-id=102,diff-type=compliant]
 ----
@@ -46,6 +57,26 @@ Enabled encryption for managed disk:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=112,diff-type=compliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    storageProfile: {
+      dataDisks: [
+        {
+          name: 'myDisk'
+          managedDisk: {
+            diskEncryptionSet: {
+              id: 'string'
+            }
+          }
+        }
+      ]
+    }
+  }
 }
 ----
 
@@ -80,6 +111,28 @@ Enabled encryption for managed disk through security profile:
 }
 ----
 
+[source,bicep,diff-id=113,diff-type=compliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    storageProfile: {
+      dataDisks: [
+        {
+          name: 'myDisk'
+          managedDisk: {
+            securityProfile: {
+              diskEncryptionSet: {
+                id: 'string'
+              }
+            }
+          }
+        }
+      ]
+    }
+  }
+}
+----
+
 Enabled encryption for OS disk:
 [source,json,diff-id=104,diff-type=compliant]
 ----
@@ -110,6 +163,28 @@ Enabled encryption for OS disk:
 }
 ----
 
+[source,bicep,diff-id=114,diff-type=compliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    storageProfile: {
+      osDisk: {
+        name: 'myDisk'
+        encryptionSettings: {
+          enabled: true
+          diskEncryptionKey: {
+            secretUrl: 'string'
+            sourceVault: {
+              id: 'string'
+            }
+          }
+        }
+      }
+    }
+  }
+}
+----
+
 Enabled encryption for OS managed disk:
 [source,json,diff-id=105,diff-type=compliant]
 ----
@@ -134,6 +209,25 @@ Enabled encryption for OS managed disk:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=115,diff-type=compliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    storageProfile: {
+      osDisk: {
+        name: 'myDisk'
+        managedDisk: {
+          id: 'myDiskId'
+          diskEncryptionSet: {
+            id: 'string'
+          }
+        }
+      }
+    }
+  }
 }
 ----
 
@@ -162,5 +256,26 @@ Enabled encryption for OS managed disk through security profile:
       }
     }
   ]
+}
+----
+
+[source,bicep,diff-id=116,diff-type=compliant]
+----
+resource myName 'Microsoft.Compute/virtualMachines@2022-11-01' = {
+  properties: {
+    storageProfile: {
+      osDisk: {
+        name: 'myDisk'
+        managedDisk: {
+          id: 'myDiskId'
+          securityProfile: {
+            diskEncryptionSet: {
+              id: 'string'
+            }
+          }
+        }
+      }
+    }
+  }
 }
 ----
