--- a/rules/S6388/azureresourcemanager/examples/Microsoft.ContainerService_managedClusters.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.ContainerService_managedClusters.noncompliant.adoc
@@ -21,3 +21,16 @@ Disabled encryption at host and set the disk encryption set ID:
   ]
 }
 ----
+
+[source,bicep,diff-id=1111,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.ContainerService/managedClusters@2023-03-02-preview' = {
+  properties: {
+    agentPoolProfiles: [
+      {
+        enableEncryptionAtHost: false
+      }
+    ]
+  }
+}
+----
