--- a/rules/S6388/azureresourcemanager/examples/Microsoft.DBforMySQL_servers.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.DBforMySQL_servers.noncompliant.adoc
@@ -17,3 +17,13 @@ Disabled infrastructure double encryption for MySQL server:
   ]
 }
 ----
+
+[source,bicep,diff-id=611,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.DBforMySQL/servers@2017-12-01' = {
+  properties: {
+    infrastructureEncryption: 'Disabled'
+  }
+}
+----
+
