--- a/rules/S6388/azureresourcemanager/examples/Microsoft.DataLakeStore_accounts.compliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.DataLakeStore_accounts.compliant.adoc
@@ -17,3 +17,12 @@ Enabled encryption for Data Lake Store:
   ]
 }
 ----
+
+[source,bicep,diff-id=511,diff-type=compliant]
+----
+resource symbolicname 'Microsoft.DataLakeStore/accounts@2016-11-01' = {
+  properties: {
+    encryptionState: 'Enabled'
+  }
+}
+----
