--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Kusto_clusters.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Kusto_clusters.noncompliant.adoc
@@ -17,3 +17,13 @@ Disabled encryption for disk:
   ]
 }
 ----
+
+[source,bicep,diff-id=1411,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Kusto/clusters@2022-12-29' = {
+  properties: {
+    enableDiskEncryption: false
+  }
+}
+----
+
