--- a/rules/S6388/azureresourcemanager/examples/Microsoft.Storage_storageAccounts.noncompliant.adoc
+++ b/rules/S6388/azureresourcemanager/examples/Microsoft.Storage_storageAccounts.noncompliant.adoc
@@ -20,6 +20,17 @@ Disabled enforcing of infrastructure encryption for double encryption of data:
 }
 ----
 
+[source,bicep,diff-id=1011,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Storage/storageAccounts@2022-09-01' = {
+  properties: {
+    encryption: {
+      requireInfrastructureEncryption: false
+    }
+  }
+}
+----
+
 For https://learn.microsoft.com/en-us/azure/templates/microsoft.storage/storageaccounts/encryptionscopes?pivots=deployment-language-bicep[Microsoft.Storage/storageAccounts/encryptionScopes]:
 
 Disabled enforcing of infrastructure encryption for double encryption of data at encryption scope level:
@@ -39,3 +50,13 @@ Disabled enforcing of infrastructure encryption for double encryption of data at
   ]
 }
 ----
+
+[source,bicep,diff-id=1012,diff-type=noncompliant]
+----
+resource symbolicname 'Microsoft.Storage/storageAccounts/encryptionScopes@2022-09-01' = {
+  properties: {
+    requireInfrastructureEncryption: false
+  }
+}
+----
+
