--- a/rules/S6378/azureresourcemanager/rule.adoc
+++ b/rules/S6378/azureresourcemanager/rule.adoc
@@ -6,6 +6,8 @@ include::../recommended.adoc[]
 
 == Sensitive Code Example
 
+Using ARM templates:
+
 [source,json,diff-id=1,diff-type=noncompliant]
 ----
 {
@@ -21,8 +23,19 @@ include::../recommended.adoc[]
 }
 ----
 
+Using Bicep:
+
+[source,bicep,diff-id=2,diff-type=noncompliant]
+----
+resource sensitiveApiManagementService 'Microsoft.ApiManagement/service@2022-09-01-preview' = {
+  name: 'apiManagementService'
+  // Sensitive: no Managed Identity is defined
+}
+----
 
 == Compliant Solution
+
+Using ARM templates:
 
 [source,json,diff-id=1,diff-type=compliant]
 ----
@@ -35,13 +48,24 @@ include::../recommended.adoc[]
             "apiVersion": "2022-09-01-preview",
             "name": "apiManagementService",
             "identity": {
-                "type": "SystemManaged"
+                "type": "SystemAssigned"
             }
         }
     ]
 }
 ----
 
+Using Bicep:
+
+[source,json,diff-id=2,diff-type=noncompliant]
+----
+resource sensitiveApiManagementService 'Microsoft.ApiManagement/service@2022-09-01-preview' = {
+  name: 'apiManagementService'
+  identity: {
+    type: 'SystemAssigned'
+  }
+}
+----
 
 include::../see.adoc[]
 
